# QTI-MAGANG

./: .gitignore  README.md  api_contract.md
.github/workflows/: ci.yml  rollback.yml
api-gateway/: Cargo.toml  Dockerfile  README.md
api-gateway/k8s/: deployment.yaml  kustomization.yaml  servicemonitor.yaml
api-gateway/src/: main.rs  models.rs
api-gateway/src/clients/: mod.rs  qdrant.rs
api-gateway/src/routes/: health.rs  mod.rs  query.rs
data-pipeline/: Cargo.toml  RAG_Manual.md  README.md  golden_datasets.json
data-pipeline/src/: main.rs
inference/src/: main.rs  type.rs
k8s/argocd/: application.yaml
llm-inference/: README.md  agent.py  evaluation_results.json  prompts.py  prompts_blueprint.md  test_run.py  tools.py
rag-service/: Cargo.toml
rag-service/src/: main.rs  models.rs  routes.rs
