[package]
name = "inference-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Server (To listen for DevOps' JSON payload)
axum = "0.7"
tokio = { version = "1.1", features = ["full"] }

# JSON Parsing (To open the API contract boxes)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"